@@ -20,6 +20,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 ====================================================================
 
 This directory contains CSS stylesheets for use with PyKota's web based 
-tools. Just copy them in the same directory (e.g. /usr/lib/cgi-bin)
+tools. Just copy them in your web server's DocumentRoot (e.g. /var/www)
+so that the CGI scripts will find them.
 
 ====================================================================
